--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,17 @@ authors = ["Eric Jackson <swiftgist@gmail.com>"]
 [dependencies]
 clap = "2"
 rayon = "1.0.3"
+tempdir = "0.3.7"
+
+[features]
+multiple = []
+
+[[bin]]
+doctest = false
+name = "ds"
+path = "src/main.rs"
+
+[lib]
+doctest = false
+name = "ds"
+path = "src/lib.rs"
