--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Eric Jackson <swiftgist@gmail.com>"]
 clap = "2"
 rayon = "1.0.3"
 tempdir = "0.3.7"
+colored = "1.8"
 
 [features]
 multiple = []
