--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,15 @@ rayon = "1.0.3"
 tempdir = "0.3.7"
 colored = "1.8"
 
-[features]
-multiple = []
-
 [[bin]]
 doctest = false
 name = "ds"
 path = "src/main.rs"
+
+[[bin]]
+doctest = false
+name = "dsx"
+path = "learning/main.rs"
 
 [lib]
 doctest = false
