Split report, update tests
The purpose for splitting the functions into report_cli.rs and
report_gui.rs is to eliminate `unused_code` warnings.  However, the
stand alone report.rs now generates `dead_code` warnings.  I add the
macro for now.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,8 @@ path = "src/main.rs"
 
 [[bin]]
 doctest = false
-name = "dsx"
-path = "learning/main.rs"
+name = "ds-gui"
+path = "src/ds-gui.rs"
 
 [lib]
 doctest = false
